--- a/estilos.css
+++ b/estilos.css
@@ -5,84 +5,73 @@
 body {
     background: #101010;
     display: flex;
-    flex-flow: column nowrap;
+    flex-flow: row nowrap;
 }
 
 /* Main order */
-.page-header    { order: 1; }
+.page-ad1       { order: 1; }
 .page-content   { order: 2; }
-.page-footer    { order: 3; }
-
-/* Header order */
-.main-ad1       { order: 1; }
-.main-header    { order: 2; }
-.main-ad2       { order: 3; }
+.page-ad2       { order: 3; }
 
 /* Content order */
-.main-ad1       { order: 1; }
+.main-header    { order: 1; }
 .main-content   { order: 2; }
-.main-sidebar   { order: 3; }
-.main-ad2       { order: 4; }
+.main-footer    { order: 3; }
 
-.page-header {
-    display: flex;
-    flex-flow: row nowrap;
+/* main-content order */
+.main-content-section   { order: 1; }
+.main-content-sidebar   { order: 2; }
+
+.page-ad1 {
+    min-width: 0px;
+    background: #ccc;
+    flex-grow: 1;
+}
+
+.page-ad2 {
+    min-width: 0px;
+    background: #ccc;
+    flex-grow: 1;
 }
 
 .page-content {
     display: flex;
-    flex-flow: row nowrap;
-}
-
-.page-footer {
-    padding: 20px;
-    color: white;
-    background-color: black;
+    flex-flow: column nowrap;
 }
 
 .main-header {
-    min-width: 900px;
+    min-width: 700px;
     background: #101010;
     flex-shrink: 0;
     flex-grow: 0;
 }
 
-.main-ad1 {
-    min-width: 0px;
-    background: #ccc;
-    flex-grow: 1;
+.main-footer {
+    padding: 20px;
+    color: white;
+    background-color: black;
 }
 
-.main-ad2 {
-    min-width: 0px;
-    background: #ccc;
-    flex-grow: 1;
+.main-content   {
+    display: flex;
+    flex-flow: row nowrap;
 }
 
-.main-content {
+.main-content-section {
     padding: 10px;
-    width: 700px;
+    width: 800px;
     background: white;
     flex-shrink: 0;
     flex-grow: 0;
 }
 
-.main-sidebar {
+.main-content-sidebar {
     padding: 10px;
     width: 200px;
     background: #202020;
     flex-shrink: 0;
     flex-grow: 0;
 }
-
-
-
-
-
-
-
-
-
 
 .row {
     padding: 10px;
@@ -137,6 +126,10 @@ body {
     font-size: 12px;
     color: black;
     width: 100px;
+}
+
+.submenu {
+    background-color: green;
 }
 
 .block {
